@@ -1,6 +1,8 @@
 4.0
  * Update bundled cqlsh python driver to 3.7.0 (CASSANDRA-12736)
  * Reject invalid replication settings when creating or altering a keyspace (CASSANDRA-12681)
+Merged from 3.0:
+ * Make stress use client mode to avoid checking commit log size on startup (CASSANDRA-12478)
 
 3.10
  * cdc column addition still breaks schema migration tasks (CASSANDRA-12697)
